Factless split: bound the correlated joint read while it streams
A context the split cannot separate kept its joint tuple SQL, but first
ran an exact count over the same joint relation (count(*), or a DISTINCT
All/leaf mask count for drills): about twice the database work of the
flag-off path, four times for drilled shapes on H2.

The joint statement is now its own guard. Without a drill its raw rows
are the candidates: the driver is asked for cap + 1 rows and the read
stops at the first row above the cap. With a drill, each row's All/leaf
projections are deduplicated exactly as DrilldownLevelCrossJoinArg
.expandTupleList does (the recursion is shared, not replicated in SQL),
and the read stops at the first projection above the cap. n candidates
still pass a cap of n and fail n - 1; the error stays a
ResourceLimitExceededException naming the levels, now reporting
jointCountAtLeast. The check runs after the look-ahead row, so the cap
wins over the member fetch limit as before.

readIndependentTupleGroups returned three plans as booleans plus empty
lists; it is now readFactlessCandidates returning a sealed FactlessRead:
Product (the split result) or Joint (read the legacy statement under the
guard).

Tests: the correlated shapes now issue exactly the flag-off statements;
the pre-count assertions of the old mechanism become streaming ones
(joint issued once, no count, rows fetched stop at cap + 1), and the
wide ten-drill shape is now also checked to pass at its exact size.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>